2011-12-04  Nils Maier  <maierman@web.de>

	* mkvmerge, mkvextract: enhancement: Implemented input file
	buffering in mkvmerge and improved/implemented output file
	buffering in other tools.

2011-12-03  Moritz Bunkus  <moritz@bunkus.org>

	* mmg, mkvinfo's GUI: enhancement: Added new icons based on the
	work of Alexandr Grigorcea (see AUTHORS).

	* mmg: bug fix: Fixed a memory leak in mmg's header editor that
	caused the "open file" function to stop working after opening a
	few files. Fix for bug 679.

2011-11-28  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.1.0.

	* mkvmerge: bug fix: Fixed more timecode handling issues for video
	tracks in MPEG transport streams whose PES packets sometimes don't
	have a timecode.

	* mkvmerge: bug fix: mkvmerge will no longer create folders on
	drives it shouldn't create them on on Windows.

2011-11-26  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed bogus huge timecodes sometimes
	occurring for AVC/h.264 video tracks read from MPEG transport
	streams.

2011-11-24  Moritz Bunkus  <moritz@bunkus.org>

	* all: enhancement: Made all EXEs declare their required access
	level privileges for Windows' User Access Control.

	* mmg: enhancement: Made mmg DPI-aware on Windows (tested up to
	144 DPI).

2011-11-09  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: mmg will append ".xml" to the file name entered
	when saving from the chapter editor if no extension was given.

2011-11-06  Moritz Bunkus  <moritz@bunkus.org>

	* mkvinfo: bug fix: Improved skipping broken data on all operating
	systems.

	* mkvmerge, mkvextract: bug fix: Skipping broken data in Matroska
	file often caused the program to abort on Windows. This has been
	fixed so that processing continues after the broken part. Fix for
	bug 668.

2011-11-04  Moritz Bunkus  <moritz@bunkus.org>

	* examples: Added XSLT 2.0 stylesheets in the
	"examples/stylesheets" directory for turning Matroska chapters